fastapi-k8s-cluster/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  labels:
    app: fastapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi-container
        image: host.docker.internal:5050/startrek_ships:0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 8001
